5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1723_2499.log
== TEST (2019-05-09 11:48:47) 
-- CODE:
from math import*
a = int(input("numero: "))
x = 0
i = 0
fim = x - 1
while(i <= fim):
	x = x + (factorial(i))
	x = x +1

print(round(,2))
-- ERROR:
File "XXXX", line 10
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:49:02) 
-- CODE:
from math import*
a = int(input("numero: "))
x = 0
i = 0
fim = x - 1
while(i <= fim):
	x = x + (factorial(i))
	x = x +1

print(round(x,2))
-- ERROR:
File "XXXX", line 10
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:50:38) 
-- CODE:
from math import*
a = int(input("numero: "))
x = 0
i = 0
fim = x - 1
while(i <= fim):
	x = x + (factorial(i))
	i = i + 1

print(round(x,2))
-- ERROR:
File "XXXX", line 10
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:51:32) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (factorial(i))
	i = i + 1

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:51:46) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (factorial(i))
	i = i + 1

print(round(soma,2))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:52:23) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (1/factorial(i))
	i = i + 1

print(round(soma,2))
-- OUTPUT:
2.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:52:47) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (1/factorial(i))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:52:52) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (1/factorial(i))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:52:58) 
-- CODE:
from math import*
a = int(input("numero: "))
soma = 0
i = 0
fim = a - 1
while(i <= fim):
	soma = soma + (1/factorial(i))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.138771
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
